# project1_Kozhevnikov_Igor_M25-555

./: .gitignore  Makefile  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
